# metric-few-shot-graph

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.dvc/: config
.github/workflows/: publish.yml  test_suite.yml
conf/: as-maml.yaml  default.yaml  dml.yaml  gsm.yaml  kernel.yaml  meta.yaml  mpp.yaml  transfer.yaml
conf/hydra/: default.yaml
conf/nn/: as-maml.yaml  default.yaml  dml.yaml  gsm.yaml  kernel.yaml  meta.yaml  mpp.yaml  transfer.yaml
conf/nn/data/: coildel.yaml  dummy.yaml  enzymes.yaml  letterhigh.yaml  r52.yaml  reddit.yaml  tox21.yaml  triangles.yaml
conf/nn/model/: adaptive_protonet.yaml  adaptive_tadam.yaml  as-maml.yaml  fully_graphical.yaml  gnn_embedding_cosine.yaml  gnn_embedding_cosine_nll.yaml  gnn_embedding_cpd.yaml  gnn_embedding_crossentropy.yaml  gnn_embedding_l2.yaml  gnn_embedding_log.yaml  gnn_embedding_mlp.yaml  gnn_embedding_triplet.yaml  graph_kernel.yaml  gsm.yaml  maml.yaml  molecular_tadam.yaml  probabilistic_protonet.yaml  prototypical_network.yaml  tadam.yaml  transfer_learning.yaml
conf/sweeps/: grid_search.yaml  multidataset.yaml  multiseed.yaml
conf/train/: as-maml.yaml  default.yaml  dml.yaml  gsm.yaml  kernel.yaml  meta.yaml  mpp.yaml  transfer.yaml
data/: .gitignore  COIL-DEL.dvc  ENZYMES.dvc  Letter_high.dvc  R52.dvc  Reddit.dvc  TRIANGLES.dvc
data/DUMMY/: DUMMY.txt  classes_split.json
data/Tox21/: Tox21.tsv  classes_split.json
data/colors/: COIL-DEL.json  ENZYMES.json  Letter_high.json  R52.json  Reddit.json  TRIANGLES.json
docs/: index.md
notebooks/: crossover_playground.ipynb  pos_enc.ipynb
scripts/: parallel_kernel.sh
src/fs_grl/: __init__.py  callbacks.py  preprocess_similarities.py  run.py  run_dml.py  run_transfer_learning.py  utils.py
src/fs_grl/data/: dataloader.py  datamodule.py  dataset.py  episode.py  io_utils.py  smiles_utils.py  utils.py
src/fs_grl/gsm/: datamodule.py  graph_ismorphism_network.py  mlp.py  modules.py  utils.py
src/fs_grl/modules/: attention.py  fully_graphical_module.py  gin.py  gnn_embedder.py  gnn_embedding_cosine.py  gnn_embedding_cosine_nll.py  gnn_embedding_l2.py  gnn_embedding_log.py  gnn_embedding_mlp.py  gnn_embedding_pairwise.py  gnn_embedding_softmax.py  (+9 more)
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_data_loading.py  test_resume.py
useful_code/: gin.py
(+130 files in other folders)
