[metadata]
name = fs-grl
description = A new awesome project.
url = https://github.com/crisostomi/fs-grl
long_description = file: README.md
author = Donato Crisostomi
author_email = donatocrisostomi@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
scripts =
    src/fs_grl/scripts/run_dml.py
    src/fs_grl/scripts/run_as_maml.py
    src/fs_grl/scripts/run_graph_kernel.py
    src/fs_grl/scripts/run_gsm.py
    src/fs_grl/scripts/run_meta.py
    src/fs_grl/scripts/run_mpp.py
    src/fs_grl/scripts/run_transfer_learning.py
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.0.6

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning>=1.5.8,<1.6
    networkx
    hydra-core
    wandb
    streamlit
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc[gdrive]
    python-dotenv
    matplotlib
    plotly
    stqdm
    kaleido
    higher
    backports.strenum
    grakel

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
